# website

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO  about.md  contact.md  cv-linkedin.md  cv-template.tex  cv.md  default.nix  dimitrije-website.cabal  hie.yml  main.md  shell.nix  site.hs  stack.yaml
bib/: refs.bib
csl/: ieee-with-url.csl
css/: fonts.css  style.css
files/: Lanberg_10inch_Cabinet_Leg.FCStd  Lanberg_10inch_Cabinet_Leg.stl  Lanberg_10inch_Cabinet_Leg_Cutout.FCStd  Lanberg_10inch_Cabinet_Leg_Cutout.stl  Optiplex_7040_Micro_10Inch_Rack_Mount.stl  TEG1105PD_10Inch_Rack_Mount.FCStd  TEG1105PD_10Inch_Rack_Mount.stl
fonts/: LICENSE.Charter  LICENSE.FiraMono
images/: site.webmanifest
nix/: default.nix  overlays.nix  site.nix  sources.json
pages/: cv.md  main.md
posts/: 2021-03-13-til-clear-nukes-scrollback.md  2022-01-15-building-ryzen-htpc-part1.md  2022-02-12-nat-woes-oracle.md  2022-06-06-building-ryzen-htpc-part2.md  2022-10-09-wireless-fob-with-mikrotik-and-wireguard.md  2023-03-04-nix-ocaml.md  2024-01-02-homelab-hardware.md  2024-03-25-homelab-netboot.md
syntax/: bash.xml  ocaml.xml  routeros.xml  terraform.xml
templates/: archive.html  cv-template.tex  default.html  footer.html  header.html  post-list.html  post-recent-list.html  post.html  sitemap.xml
