name:                dimitrije-website
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://dimitrije.website
license:             BSD3
license-file:        LICENSE
author:              Dimitrije Radojević
maintainer:          me@dimitrije.website
copyright:           2020 Dimitrije Radojević
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable site
  main-is:            site.hs
  default-language:   Haskell2010
  ghc-options:        -threaded
  build-depends:      base >= 4.7 && < 5,
                      hakyll >= 4.13,
                      pandoc >= 2.7,
                      time
