cabal-version:       3.4
name:                dimitrije-website
version:             0.1.0.0
homepage:            https://dimitrije.website
license:             LGPL-3.0-only
license-file:        LICENSE
author:              Dimitrije Radojević
maintainer:          me@dimitrije.website
copyright:           2022 Dimitrije Radojević
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable site
  main-is:            site.hs
  default-language:   Haskell2010
  ghc-options:        -threaded
  build-depends:      base >= 4.7 && < 5,
                      containers >= 0.6,
                      hakyll >= 4.13,
                      pandoc >= 2.7,
                      skylighting >= 0.10,
                      skylighting-core >= 0.10,
                      text >= 1.2,
                      process >= 1.6,
                      time >= 1.9
